--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:oracle:thin:@localhost:1521:ORCL
-    username: kaifa
-    password: zsl.com
+    url: localhost
+    username: mima
+    password: mima
     driver-class-name: oracle.jdbc.OracleDriver
     type: com.alibaba.druid.pool.DruidDataSource
   servlet:
@@ -14,12 +14,30 @@ spring:
       enabled: true
       max-file-size: 10MB
       max-request-size: 100MB
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    password: 1q2w3e4r
+      ##连接超时
+    timeout: 10000
+    jedis:
+      pool:
+        ##连接池最大连接数
+        max-active: 8
+        ##连接池最大阻塞等待时间(负数表示没有限制)
+        max-wait: -1
+        ##连接池最大空闲数
+        max-idle: 5
+        ##连接池最下空闲数
+        min-idle: 0
+
+
+##mybatis配置
 mybatis:
   mapper-locations: classpath:mapper/*.xml
 logging:
   level:
     com.integral.mapper: debug
-
 
 ##fsdtDFS
 fdfs:
