--- a/pom.xml
+++ b/pom.xml
@@ -83,13 +83,21 @@
 			<version>5.0.0</version>
 			<optional>true</optional>
 		</dependency>
-
+		<!--druid-->
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid</artifactId>
 			<version>1.0.28</version>
 			<optional>true</optional>
 		</dependency>
+
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<version>1.1.0</version>
+			<type>pom</type>
+		</dependency>
+
 		<!--redis客户端-->
 		<dependency>
 			<groupId>redis.clients</groupId>
