--- a/src/main/resources/application-pro.yml
+++ b/src/main/resources/application-pro.yml
@@ -73,12 +73,15 @@ fdfs:
 ##ngnix地址
 file-url: http://localhost:8502/
 
+##eureka
 eureka:
   client:
     service-url:
-      dafaultZone: http://182.61.53.74:8080/eureka/
+      defaultZone: http://localhost:8090/eureka/
+    #eureka-server-connect-timeout-seconds: 20
+    #fetch-registry: true
   instance:
     prefer-ip-address: true
-    instance-id: IntegralShop:${spring.cloud.client.ip-address}:${server.port}
-    lease-renewal-interval-in-seconds: 50000
-    lease-expiration-duration-in-seconds: 5
+    instance-id: ${spring.cloud.client.ip-address}:${server.port}
+    lease-renewal-interval-in-seconds: 5
+    lease-expiration-duration-in-seconds: 10
