--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <groupId>com.supermarket.platform</groupId>
     <artifactId>supermarket-platform</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
     <name>supermarketProject</name>
     <description>supermarket-platform</description>
 
