--- a/supplier/src/main/resources/application-pro.yml
+++ b/supplier/src/main/resources/application-pro.yml
@@ -59,7 +59,7 @@ mybatis:
   mapper-locations: classpath:mapper/*.xml
 logging:
   level:
-    com.integral.mapper: debug
+    com.integral.mapper: info
 
 
 ##fsdtDFS
