添加common工程被其他model引用

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>secondPurchase</module>
         <module>shop</module>
         <module>supplier</module>
+        <module>common</module>
     </modules>
 
     <dependencies>
