oauth 修改启动报错

--- a/integral/pom.xml
+++ b/integral/pom.xml
@@ -10,6 +10,7 @@
     </parent>
     <artifactId>integral</artifactId>
     <name>integralProject</name>
+    <packaging>pom</packaging>
     <url>http://maven.apache.org</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
