--- a/common/pom.xml
+++ b/common/pom.xml
@@ -24,11 +24,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-oauth2</artifactId>
-            <version>2.1.3.RELEASE</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
+            <!--<version>2.1.3.RELEASE</version>-->
         </dependency>
     </dependencies>
 </project>
