--- a/oauth/pom.xml
+++ b/oauth/pom.xml
@@ -10,7 +10,6 @@
     </parent>
     <artifactId>oauth</artifactId>
     <name>oauthProject</name>
-    <url>http://maven.apache.org</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -22,7 +21,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-oauth2</artifactId>
-            <version>2.1.3.RELEASE</version>
+           <!-- <version>2.1.3.RELEASE</version>-->
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
