--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,12 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <spring-cloud.version>Greenwich.SR1</spring-cloud.version>
     </properties>
 
     <modules>
         <module>oauth</module>
-        <module>integral</module>
+        <!--<module>integral</module>-->
         <module>pay</module>
         <module>secondPurchase</module>
         <module>shop</module>
@@ -69,11 +70,11 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>2.0.1</version>
         </dependency>
-        <dependency>
+       <!-- <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
             <version>2.1.1.RELEASE</version>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -92,8 +93,6 @@
             <artifactId>ojdbc6</artifactId>
             <version>11.2.0.3</version>
         </dependency>
-
-
         <!--分页-->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
@@ -163,6 +162,21 @@
             <type>java-source</type>
         </dependency>
     </dependencies>
+
+    <!--控制每个model的版本号-->
+    <dependencyManagement>
+        <dependencies>
+            <!--cloud版本号-->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
 
     <build>
         <plugins>
